--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,55 @@
+name: CI/CD for Churn Prediction (Docker → Elastic Beanstalk)
 
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
+
+env:
+  AWS_REGION: eu-west-1
+  EB_ENVIRONMENT: Churn-redha-env
+  DOCKER_IMAGE: churn-redha
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Install Elastic Beanstalk CLI
+        run: |
+          python -m pip install --upgrade pip
+          pip install --user awsebcli
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          eb --version
+
+      # -----------------------------
+      # Build & test in Docker
+      # -----------------------------
+      - name: Build Docker image
+        run: |
+          docker build -t $DOCKER_IMAGE .
+
+      - name: Run tests in Docker
+        run: |
+          docker run --rm $DOCKER_IMAGE pytest -q
+
+      # -----------------------------
+      # Deploy to Elastic Beanstalk
+      # -----------------------------
+      - name: Check EB config
+        run: |
+          test -f .elasticbeanstalk/config.yml || (echo "Missing .elasticbeanstalk/config.yml. Run 'eb init' once locally and commit it." && exit 1)
+
+      - name: Deploy to Elastic Beanstalk
+        run: |
+          eb deploy "$EB_ENVIRONMENT" --staged
