--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,12 @@
-name: CI/CD for Churn Prediction (Docker → Elastic Beanstalk)
+name: CI/CD for Churn Prediction
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths:
+      - train.py
   workflow_dispatch:
-
-env:
-  AWS_REGION: eu-west-1
-  EB_ENVIRONMENT: Churn-redha-env
-  DOCKER_IMAGE: churn-redha
 
 jobs:
   deploy:
@@ -18,38 +16,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          python-version: "3.12"
 
-      - name: Install Elastic Beanstalk CLI
+      - name: Install AWS Elastic Beanstalk CLI
         run: |
           python -m pip install --upgrade pip
           pip install --user awsebcli
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           eb --version
 
-      # -----------------------------
-      # Build & test in Docker
-      # -----------------------------
-      - name: Build Docker image
-        run: |
-          docker build -t $DOCKER_IMAGE .
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
 
-      - name: Run tests in Docker
+      - name: Build Docker Image
         run: |
-          docker run --rm $DOCKER_IMAGE pytest -q
+          docker build -t churn-redha .
 
-      # -----------------------------
-      # Deploy to Elastic Beanstalk
-      # -----------------------------
-      - name: Check EB config
+      - name: Run Tests in Docker
         run: |
-          test -f .elasticbeanstalk/config.yml || (echo "Missing .elasticbeanstalk/config.yml. Run 'eb init' once locally and commit it." && exit 1)
+          docker run --rm churn-redha python -m pytest -q
+
+      - name: Initialize Elastic Beanstalk Application
+        run: |
+          eb init -p docker churn-redha --region eu-west-1
 
       - name: Deploy to Elastic Beanstalk
         run: |
-          eb deploy "$EB_ENVIRONMENT" --staged
+          eb deploy Churn-redha-env --staged
