--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,16 +37,16 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t churn-redha .
+          docker build -t redha-test .
 
       - name: Run Tests in Docker
         run: |
-          docker run --rm churn-redha python -m pytest -q
+          docker run --rm redha-test python -m pytest -q
 
       - name: Initialize Elastic Beanstalk Application
         run: |
-          eb init -p docker churn-redha --region eu-west-1
+          eb init -p docker redha-test --region eu-west-1
 
       - name: Deploy to Elastic Beanstalk
         run: |
-          eb deploy Churn-redha-env --staged
+          eb deploy Env-redha-test --staged
